# WheelKit

./: README.md  build.gradle  common.gradle  config.gradle  gradle.properties  settings.gradle
app/: build.gradle
app/src/androidTest/java/com/loy/wheelkit/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/java/com/loy/kit/: Camera1Fragment.java  Camera2Fragment.java  CameraFragment.java  CameraUseFragment.java  CameraUseUtil.java  CameraXFragment.java  LogFragment.java  MainActivity.java  MainFragment.java  MyApplication.java  SplashActivity.java
app/src/main/java/com/loy/wheelkit/: Camera1Fragment.java  Camera2Fragment.java  CameraFragment.java  CameraUseFragment.java  CameraUseUtil.java  CameraXFragment.java  FirstFragment.java  LogFragment.java  (+5 more)
app/src/main/res/layout/: activity_main.xml  activity_splash.xml  fragment_camera.xml  fragment_camera2.xml  fragment_camerax.xml  fragment_first.xml  fragment_log.xml  fragment_main.xml  fragment_second.xml
app/src/main/res/menu/: menu_main.xml
app/src/main/res/navigation/: nav_graph.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/main/res/xml/: file_paths.xml
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
kit/: CMakeLists.txt  build.gradle
kit/libs/: CMakeLists.txt
kit/src/androidTest/java/com/loy/kit/: ExampleInstrumentedTest.java  MyJavaTest.java
kit/src/main/: AndroidManifest.xml
kit/src/main/cpp/: CMakeLists.txt  DecoderWrapper.cpp  DemuxerWrapper.cpp  MuxerWrapper.cpp  PlayerWrapper.cpp  SLWrapper.cpp  kit.cpp
kit/src/main/cpp/ffmpeg/: DecoderWrapper.cpp  DemuxerWrapper.cpp  MuxerWrapper.cpp
kit/src/main/cpp/include/: DecoderWrapper.h  DemuxerWrapper.h  LogWrapper.h  MuxerWrapper.h  PlayerWrapper.h  SLBase.h  SLPlayer.h  SLRecorder.h  SLSource.h  SLWrapper.h  UtilWrapper.hpp  kit.h
kit/src/main/cpp/include/ffmpeg/libavcodec/: avcodec.h  bsf.h  codec_desc.h  vdpau.h
kit/src/main/cpp/include/ffmpeg/libavfilter/: avfilter.h
kit/src/main/cpp/include/ffmpeg/libavformat/: avformat.h  avio.h
kit/src/main/cpp/include/ffmpeg/libavutil/: avstring.h  bprint.h  encryption_info.h  eval.h  ffversion.h  hwcontext_d3d11va.h  imgutils.h  lfg.h  mathematics.h  opt.h  pixdesc.h  samplefmt.h
kit/src/main/cpp/include/jni/: PlayerJNI.h
kit/src/main/cpp/include/libavcodec/: avcodec.h  bsf.h  codec.h  packet.h  xvmc.h
kit/src/main/cpp/include/libavformat/: avformat.h  avio.h
kit/src/main/cpp/include/libavutil/: avassert.h  dict.h  hwcontext.h  hwcontext_vulkan.h  log.h  stereo3d.h  tree.h  tx.h
kit/src/main/cpp/include/libswresample/: swresample.h
kit/src/main/cpp/jni/: MediaJNI.cpp  PlayerJNI.cpp
kit/src/main/cpp/sl/: SLBase.cpp  SLBufferPlayer.cpp  SLFilePlayer.cpp  SLPlayer.cpp  SLRecorder.cpp  SLSource.cpp
kit/src/main/java/com/loy/kit/: ActivityObserver.java  Config.java  Flag.java  Kit.java  NativeLib.java  Utils.java
kit/src/main/java/com/loy/kit/base/: BaseActivity.java  BaseApplication.java  BaseFragment.java
kit/src/main/java/com/loy/kit/constants/: Constants.java
kit/src/main/java/com/loy/kit/hotfix/: Patcher.java
kit/src/main/java/com/loy/kit/jni/: FFmpegKit.java  NativeLib.java  RxPlayer.java
kit/src/main/java/com/loy/kit/log/: AppLog.java  ILog.java  SdkLog.java
kit/src/main/java/com/loy/kit/log/core/: Adapter.java  Config.java  ConsolePrinter.java  CrashAdapter.java  DebugAdapter.java  FileAdapter.java  FilePrinter.java  Format.java  Level.java  Logger.java  LoggerManager.java  PlainFormat.java  PrettyDebugAdapter.java  PrettyFormat.java  Printer.java  UploadPrinter.java  ViewAdapter.java  ViewPrinter.java  ViewPrinterProvider.java
kit/src/main/java/com/loy/kit/media/capture/camrea/: BaseCamera.java  Camera1Impl.java  Camera1MediaRecord.java  Camera2Impl.java  Camera2MediaRecord.java  CameraClient.java  CameraHelper.java
kit/src/main/java/com/loy/kit/media/capture/camrea/bean/: CaptureFormat.java  Error.java  FrameRateRange.java  Profile.java  Resolution.java  SensorInfo.java
kit/src/main/java/com/loy/kit/media/codec/: AudioDecoder.java  Codec.java  CodecBuffer.java  CodecFormat.java  CodecUtil.java  Demuxer.java  Muxer.java  TrackInfo.java  VideoCodec.java  VideoDecoder.java  VideoEncoder.java
kit/src/main/java/com/loy/kit/media/render/: AbstractShader.java  BeautyShader.java  EGLHelper.java  OESTextureShader.java  RectShader.java  RendererEvents.java  Sample2DTextureShader.java  ShaderHelper.java  SurfacePreview.java  TextureObject.java  TexturePreview.java  VideoFrame.java  Watermark.java  WatermarkManager.java  WatermarkShader.java  YUVShader.java
kit/src/main/java/com/loy/kit/tool/: LauncherMonitor.java  MainThreadMonitor.java  StrictModeSwitcher.java  TrafficStatistic.java
kit/src/main/java/com/loy/kit/utils/: AppUtil.java  BluetoothUtil.java  ClipboardUtil.java  CloseUtil.java  CodecUtil.java  ConvertUtil.java  CpuUtil.java  CrashUtil.java  DeviceUtil.java  DialogUtil.java  DigestUtil.java  DirUtil.java  EditFilterUtils.java  EmptyUtil.java  EncodeUtil.java  EncryptUtil.java  FileIOUtil.java  ImageUtils.java  IntentUtils.java  JSONWrapper.java  JsonUtil.java  LocationUtil.java  MatrixUtil.java  NetworkUtil.java  OrientationUtil.java  PermissionUtil.java  PingUtil.java  ProgressDialogUtil.java  ReflectUtil.java  ResourceUtil.java  SPUtil.java  ScanUtil.java  ScreenShotUtils.java  ScreenUtil.java  ServiceManagerUtil.java  ShellUtil.java  SnackBarUtil.java  ThreadUtil.java  TimeUtil.java  ToastUtil.java  (+6 more)
kit/src/main/java/com/loy/kit/widgets/recyclerview/: BaseAdapter.java  BaseItem.java  BaseViewHolder.java  DefaultDivider.java
kit/src/main/res/anim/: slide_in_right.xml  slide_out_left.xml
kit/src/main/res/layout/: view_printer.xml
kit/src/main/res/raw/: beauty.glsl  default_fragment_2d.glsl  default_fragment_oes.glsl  default_fragment_oes2yuv.glsl  default_fragment_yuv.glsl  default_vertex_2d.glsl
kit/src/main/res/values/: colors.xml  dimens.xml  strings.xml  styles.xml
kit/src/test/java/com/loy/kit/: ExampleUnitTest.java
(+1 files in other folders)
